--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -17,6 +17,7 @@
 
 .header { 
     height: 100vh;
+    margin-bottom: 10rem;
        &__heading {
            font-size: 5rem;
            text-transform: uppercase;
@@ -39,7 +40,6 @@
            position: absolute;
            top: 1rem;
            left: 1rem;
-           animation: pulse 2s infinite;
        }
 }
 
@@ -230,24 +230,24 @@
      flex-wrap: nowrap;
 }
 
-.button {
-        text-transform: uppercase;
-        text-decoration: none;
-        padding: 1.5rem 4rem;
-        border-radius: 3px;
-        transition: all .2s;
-        font-size: 3rem;
-        border: none;
-        cursor: pointer;
-        color: $color-white;
-        background-color: $color-brick-red;
-        padding: 1.5rem 3rem;
-        font-size: 2rem;
-        margin-right: 2rem;
-}
+// .button {
+//         text-transform: uppercase;
+//         text-decoration: none;
+//         padding: 1.5rem 4rem;
+//         border-radius: 3px;
+//         transition: all .2s;
+//         font-size: 3rem;
+//         border: none;
+//         cursor: pointer;
+//         color: $color-white;
+//         background-color: $color-brick-red;
+//         padding: 1.5rem 3rem;
+//         font-size: 2rem;
+//         margin-right: 2rem;
+// }
 
 
-button[type="submit"] {
+input[type="submit"] {
     background-color: $color-matte-black;
     width: 100%;
     color: white;
@@ -258,6 +258,16 @@ button[type="submit"] {
 
 }
 
+fieldset {
+    border: none;
+   
+}
+h3 {
+    font-size: 3rem;
+    text-align: center;
+    margin-bottom: 10rem;
+    text-transform: uppercase;
+}
 
 
 //////////////// style jquery 
@@ -280,31 +290,49 @@ button[type="submit"] {
     height: auto;
 }
 
-///////////// input field 
-
-#news {
-    background-color: yellowgreen;
-    padding: 1.5rem;
-}
-form {
-    text-align: center;
-    margin: 3rem;
-}
-
-
-////////////////// options 
-
-#options {
-    background-color: $color-brick-red;
-    color: $color-white;
-    font-size: 3rem;
-    margin: 5rem auto;
+///////////// Selection 
+.custom-select {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    height: 57px;
+    padding: 10px 38px 10px 16px;
+    background: $color-brick-red url() no-repeat right 16px center;
+    background-size: 10px;
+    transition: border-color .1s ease-in-out,box-shadow .1s ease-in-out;
+    border: 1px solid $color-brick-red;
+    border-radius: 3px;
+    font-size: 2rem;
     display: flex;
+    cursor: pointer;
+    color: $color-white;
     text-transform: uppercase;
-
+    letter-spacing: 1px;
 }
-.option {
-    background-color: $color-medium-grey;
-    padding: 3rem;
+.custom-select:hover {
+    border: 1px solid $color-brick-red;
+}
+.custom-select:focus {
+    border: 1px solid  $color-brick-red;
+    box-shadow: 0 3px 5px 0 rgba(0,0,0,.2);
+    outline: none;
+}
+/* remove default arrow in IE */
+select::-ms-expand {
+    display:none;
 }
 
+.selection-div {
+    display: flex;
+    justify-content: space-around;
+ 
+}
+.section-options {
+   margin: 5rem;
+}
+.icon {
+    font-size: 4rem;
+    color: $color-brick-red;
+    animation: pulse 2s infinite;
+    padding: 0 5rem;   
+}
