--- a/css/style.css
+++ b/css/style.css
@@ -255,3 +255,52 @@ select::-ms-expand {
   color: #962715;
   animation: pulse 2s infinite;
   padding: 0 5rem; }
+
+.reset {
+  background-color: #962715;
+  height: 5rem;
+  width: 5rem;
+  border-radius: 50%;
+  color: #fff;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.5rem;
+  position: fixed;
+  z-index: 10000;
+  bottom: 5%;
+  left: 0;
+  text-decoration: none; }
+
+#scroll {
+  position: fixed;
+  right: 10px;
+  bottom: 5%;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  background-color: #962715;
+  opacity: .6;
+  text-indent: -9999px;
+  display: none;
+  -webkit-border-radius: 60px;
+  -moz-border-radius: 60px;
+  border-radius: 60px; }
+
+#scroll span {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-left: -8px;
+  margin-top: -12px;
+  height: 0;
+  width: 0;
+  border: 8px solid transparent;
+  border-bottom-color: #ffffff; }
+
+#scroll:hover {
+  background-color: #962715;
+  opacity: 1;
+  filter: "alpha(opacity=100)";
+  -ms-filter: "alpha(opacity=100)"; }
