--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,8 @@ body {
   height: 4rem;
   background-color: #1e1e20;
   padding-left: 100%;
-  box-sizing: content-box; }
+  box-sizing: content-box;
+  z-index: 100000000000; }
   .ticker-wrap .ticker {
     display: inline-block;
     height: 4rem;
@@ -223,11 +224,29 @@ ORDER: Base + typography > general layout + grid > page layout > components
 
 .row {
   max-width: 114rem;
-  margin: 0 auto;
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-end;
-  flex-wrap: nowrap; }
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row [class^="col-"] {
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2); }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 6rem) / 3); }
+  .row .col-2-of-3 {
+    width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem); }
+  .row .col-1-of-4 {
+    width: calc((100% - 3 * 6rem) / 4); }
+  .row .col-2-of-4 {
+    width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
+  .row .col-3-of-4 {
+    width: calc(3 * ((100% - 3 * 6rem) / 4) + 2 * 6rem); }
 
 input[type="submit"] {
   background-color: #1e1e20;
@@ -238,7 +257,8 @@ input[type="submit"] {
   text-transform: uppercase;
   cursor: pointer; }
   input[type="submit"]:focus, input[type="submit"]:visited {
-    outline: none; }
+    outline: none;
+    box-shadow: 0.1rem 0.1rem 0 0 #1e1e20; }
   @media only screen and (max-width: 56.25em) {
     input[type="submit"] {
       font-size: 5rem; } }
@@ -254,21 +274,6 @@ h3 {
   text-align: center;
   margin-bottom: 10rem;
   text-transform: uppercase; }
-
-.last-section {
-  background-color: #bbc3c6;
-  color: #1e1e20; }
-
-.title {
-  font-size: 1rem;
-  text-transform: uppercase; }
-
-.paragraph {
-  font-size: 1rem; }
-
-.last-section img {
-  width: 20%;
-  height: auto; }
 
 .custom-select {
   -webkit-appearance: none;
@@ -378,6 +383,104 @@ select::-ms-expand {
   opacity: 1;
   filter: "alpha(opacity=100)";
   -ms-filter: "alpha(opacity=100)"; }
+
+.last-section {
+  background-color: #bbc3c6;
+  color: #1e1e20; }
+
+.title {
+  font-size: 1rem;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 1rem; }
+
+.last-section img {
+  width: 20%;
+  height: auto; }
+
+.section-tours {
+  background-color: cyan;
+  padding: 25rem 0 15rem 0; }
+  @media only screen and (max-width: 56.25em) {
+    .section-tours {
+      padding: 20rem 0 10rem 0; } }
+
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 52rem; }
+  .card__side {
+    height: 52rem;
+    transition: all .8s ease;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    border-radius: 3px;
+    overflow: hidden;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    .card__side--front {
+      background-color: orange; }
+    .card__side--back {
+      transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, red, yellowGreen); }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    right: 2rem;
+    width: 75%; }
+  .card__heading-span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span--1 {
+      background-image: linear-gradient(to right bottom, rgba(154, 205, 50, 0.85), rgba(154, 205, 50, 0.85)); }
+  .card__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center; }
+  .card__price-box {
+    text-align: center;
+    color: #fff;
+    margin-bottom: 8rem; }
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
+    .card {
+      height: auto;
+      border-radius: 3px;
+      background-color: #fff;
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+      .card__side {
+        height: auto;
+        position: relative;
+        box-shadow: none; }
+        .card__side--back {
+          transform: rotateY(0);
+          clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%); }
+      .card:hover .card__side--front {
+        transform: rotateY(0); }
+      .card__details {
+        padding: 1rem 3rem; } }
+
+.card__picture img {
+  width: 100%;
+  height: auto; }
 
 /*
 0 - 750px:      Phone
