--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -168,48 +168,50 @@
 
 
 //////////////////////////////////// grid 
-// .row {
-//     max-width: $grid-width;
-//     margin: 0 auto;
+.row {
+    max-width: $grid-width;
+    margin: 0 auto;
 
-//     &:not(:last-child) {
-//         margin-bottom: $gutter-vertical;
-//     }
 
-//     [class^="col-"] {
-//         float: left;
+    &:not(:last-child) {
+        margin-bottom: $gutter-vertical;
+    }
 
-//         &:not(:last-child) {
-//             margin-right: $gutter-horizontal;
-//         }
-//     }
+    [class^="col-"] {
+        float: left;
 
-//     .col-1-of-2 {
-//         width: calc((100% - #{$gutter-horizontal}) / 2);
+        &:not(:last-child) {
+            margin-right: $gutter-horizontal;
+        }
+    }
+    @include clearfix;
+
+    .col-1-of-2 {
+        width: calc((100% - #{$gutter-horizontal}) / 2);
         
-//     }
+    }
 
-//     .col-1-of-3 {
-//         width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
-//     }
+    .col-1-of-3 {
+        width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+    }
 
-//     .col-2-of-3 {
-//         width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
-//     }
+    .col-2-of-3 {
+        width: calc(2 * ((100% - 2 * #{$gutter-horizontal}) / 3) + #{$gutter-horizontal});
+    }
 
-//     .col-1-of-4 {
-//         width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
-//     }
+    .col-1-of-4 {
+        width: calc((100% - 3 * #{$gutter-horizontal}) / 4);
+    }
 
-//     .col-2-of-4 {
-//         width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
-//     }
+    .col-2-of-4 {
+        width: calc(2 * ((100% - 3 * #{$gutter-horizontal}) / 4) + #{$gutter-horizontal});
+    }
 
-//     .col-3-of-4 {
-//         width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
-//     }
+    .col-3-of-4 {
+        width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
+    }
 
-// }
+}
 
 
 // .test {
@@ -230,16 +232,7 @@
 // }
 // }
 
-.row {
-     max-width: $grid-width;
-     margin: 0 auto;
-     display: flex;
-     justify-content: space-around;
-     align-items: flex-end;
-     flex-wrap: nowrap;
-   
-   
-}
+
 
 // .button {
 //         text-transform: uppercase;
@@ -268,7 +261,8 @@ input[type="submit"] {
     cursor: pointer;
     &:focus, 
     &:visited {
-        outline: none
+        outline: none;
+        box-shadow: .1rem .1rem 0 0 $color-matte-black; // box shadow for accessibilty 
     }
 
 
@@ -294,25 +288,6 @@ h3 {
 }
 
 
-//////////////// style jquery 
-
-.last-section {
-    background-color: $color-medium-grey;
-    color: $color-matte-black;
-}
-.title {
-    font-size: 1rem;
-    text-transform: uppercase;
-
-}
-.paragraph {
-      font-size: 1rem;
-
-}
-.last-section img {
-    width: 20%;
-    height: auto;
-}
 
 ///////////// Selection 
 .custom-select {
@@ -434,3 +409,172 @@ select::-ms-expand {
     opacity:1;filter:"alpha(opacity=100)";
     -ms-filter:"alpha(opacity=100)";
 }
+
+//////////////// style jquery 
+
+.last-section {
+    background-color: $color-medium-grey;
+    color: $color-matte-black;
+}
+.title {
+    font-size: 1rem;
+    text-transform: uppercase;
+
+}
+.paragraph {
+      font-size: 1rem;
+
+}
+.last-section img {
+    width: 20%;
+    height: auto;
+}
+
+.section-tours {
+    background-color: cyan;
+    padding: 25rem 0 15rem 0;
+    @include respond(tab-port) {
+        padding: 20rem 0 10rem 0;
+    }
+}
+
+.card {
+
+    // FUNCTIONALITY
+    perspective: 150rem;
+    -moz-perspective: 150rem;
+    position: relative;
+    height: 52rem;
+    
+    &__side {
+        height: 52rem;
+        transition: all .8s ease;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        -webkit-backface-visibility: hidden;
+        backface-visibility: hidden;
+        border-radius: 3px;
+        overflow: hidden;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+
+        &--front {
+            background-color: orange;
+
+        }
+
+        &--back {
+            transform: rotateY(180deg);
+
+            &-1 {
+                background-image: linear-gradient(to right bottom, red, yellowGreen);
+            }
+        }
+    }
+  
+
+    &:hover &__side--front {
+        transform: rotateY(-180deg);
+    }
+
+    &:hover &__side--back {
+        transform: rotateY(0);
+    }
+
+
+  
+
+    &__heading {
+        font-size: 2.8rem;
+        font-weight: 300;
+        text-transform: uppercase;
+        text-align: right;
+        color: $color-white;
+        position: absolute;
+        top: 0;
+        right: 2rem;
+        width: 75%;
+    
+    }
+
+    &__heading-span {
+        padding: 1rem 1.5rem;
+        -webkit-box-decoration-break: clone;
+        box-decoration-break: clone;
+
+        &--1 {
+            background-image: linear-gradient(to right bottom, 
+            rgba(yellowGreen, .85), 
+            rgba(yellowGreen, .85));
+        }
+    }
+
+   
+
+    // FRONT SIDE STYLING
+    &__cta {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 90%;
+        text-align: center;
+    }
+
+    &__price-box {
+        text-align: center;
+        color: $color-white;
+        margin-bottom: 8rem;
+    }
+
+
+
+
+
+    //@include respond(tab-port) {
+    @media only screen and (max-width: 56.25em),
+            only screen and (hover: none) {
+
+        height: auto;
+        border-radius: 3px;
+        background-color: $color-white;
+        box-shadow: 0 1.5rem 4rem rgba($color-black, .15);
+        
+        &__side {
+            height: auto;
+            position: relative;
+            box-shadow: none;
+
+            &--back {
+                transform: rotateY(0);
+                clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
+            }
+        }
+    
+        &:hover &__side--front {
+            transform: rotateY(0);
+        }
+
+    
+        &__details {
+            padding: 1rem 3rem;
+        }
+
+    }
+
+}
+
+.card__picture  img {
+    width: 100%;
+    height: auto;
+}
+
+
+// .row {
+//     float: left;
+// }
+// .col-1-of-3 {
+//     width: 33%;
+//     padding: 5px;
+// }
