--- a/css/style.css
+++ b/css/style.css
@@ -324,16 +324,14 @@ select::-ms-expand {
   padding: 5rem 0; }
 
 .icon {
-  font-size: 4rem;
+  font-size: 2rem;
   color: #962715;
   animation: pulse 2s infinite;
-  padding: 0 5rem; }
-
-.reset {
-  background-color: #962715;
-  color: #fff;
-  padding: 3rem;
-  text-decoration: none; }
+  padding: 1rem 3rem 0;
+  background-color: #f4f5f9; }
+  @media only screen and (max-width: 46em) {
+    .icon {
+      padding-bottom: 1rem; } }
 
 #scroll {
   position: fixed;
@@ -412,13 +410,13 @@ select::-ms-expand {
     backface-visibility: hidden;
     border-radius: 3px;
     overflow: hidden;
-    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.18); }
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.22); }
     .card__side--front {
-      background-color: #bbc3c6; }
+      background-color: #fff; }
     .card__side--back {
       transform: rotateY(180deg); }
       .card__side--back-1 {
-        background-image: linear-gradient(to right bottom, #fff, #d3e0f7); }
+        background-image: linear-gradient(to right bottom, #962715, #EC6A5C); }
   .card:hover .card__side--front {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
@@ -450,6 +448,11 @@ select::-ms-expand {
     text-align: center;
     color: #fff;
     margin-bottom: 8rem; }
+    .card__price-box--heading {
+      text-transform: uppercase;
+      font-size: 2.8rem;
+      letter-spacing: 1px;
+      font-weight: 700; }
 
 p {
   padding: 4rem;
@@ -458,6 +461,25 @@ p {
 .card__picture img {
   width: 100%;
   height: 230px; }
+
+.read-more {
+  background-color: #fff;
+  color: #1e1e20;
+  padding: 2rem;
+  font-size: 2rem;
+  text-decoration: none;
+  text-transform: uppercase;
+  height: auto;
+  text-align: center;
+  line-height: 50px;
+  border-radius: 5px;
+  box-shadow: 14px 14px rgba(77, 77, 77, 0.1);
+  transition: transform 0.4s, box-shadow 0.4s; }
+  .read-more:hover {
+    box-shadow: 14px 14px rgba(77, 77, 77, 0.5); }
+  .read-more:active {
+    transform: translate3d(7px, 7px, 0px);
+    box-shadow: 7px 7px rgba(77, 77, 77, 0.5); }
 
 /*
 0 - 750px:      Phone
