--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -44,3 +44,10 @@ ORDER: Base + typography > general layout + grid > page layout > components
     }
 }
 
+
+@mixin absCenter {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
