--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,6 +2,7 @@
 
 // COLORS
 $color-brick-red: #962715;
+$color-red-light: #EC6A5C;
 $color-matte-black: #1e1e20;
 $color-medium-grey: #bbc3c6;
 $color-white: #fff;
@@ -12,8 +13,9 @@ $grid-width: 114rem;
 $gutter-vertical: 8rem;
 $gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
-// font-family: 'Raleway', sans-serif;
-// font-family: 'Open Sans', sans-serif;
+
+$duration: 40s;
+
 
 *,
 *::after,
@@ -35,7 +37,7 @@ html {
 }
 }
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
     box-sizing: border-box;
 }
 
@@ -44,104 +46,3 @@ body {
     color: $color-white;
 }
 
-
-
-//////////////////////////////////// selection 
-
-// .select-style {
-//     border: 1px solid #ccc;
-//     width: 20rem;
-//     border-radius: 3px;
-//     overflow: hidden;
-//     background: #fafafa;
-//     margin: 0 auto;
-  
-// }
-
-// .select-style select {
-//     padding: 2rem ;
-//     width: 78%;
-//     border: none;
-//     box-shadow: none;
-//     background: transparent;
-//     background-image: none;
-//     -webkit-appearance: none;
-// }
-
-// .select-style select:focus {
-//     outline: none;
-// }
-
-
-
-$duration: 40s;
-
-@-webkit-keyframes ticker {
-  0% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    visibility: visible;
-  }
-
-  100% {
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
-  }
-}
-
-@keyframes ticker {
-  0% {
-    -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-    visibility: visible;
-  }
-
-  100% {
-    -webkit-transform: translate3d(-100%, 0, 0);
-    transform: translate3d(-100%, 0, 0);
-  }
-}
-
-.ticker-wrap {
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  overflow: hidden;
-  height: 4rem;
-  background-color: $color-matte-black;
-  padding-left: 100%;
-  box-sizing: content-box;
-
-  z-index: 100000000000;
-
-  .ticker {
-
-    display: inline-block;
-    height: 4rem;
-    line-height: 4rem;  
-    white-space: nowrap;
-    padding-right: 100%;
-    box-sizing: content-box;
-
-    -webkit-animation-iteration-count: infinite; 
-            animation-iteration-count: infinite;
-    -webkit-animation-timing-function: linear;
-            animation-timing-function: linear;
-   -webkit-animation-name: ticker;
-           animation-name: ticker;
-    -webkit-animation-duration: $duration;
-            animation-duration: $duration;
-
-    &__item {
-
-      display: inline-block;
-
-      padding: 0 2rem;
-      font-size: 2rem;
-      color: white;   
-
-    }
-
-  }
-
-}
