--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,4 +1,6 @@
 @import "mixins";
+
+///////////////////////////// HEADER STYLES 
 .bg-video {
     position: absolute;
     top: 0;
@@ -28,7 +30,7 @@
            top: 30%;
            left: 10%;
            font-family: 'Raleway', sans-serif;
-           font-weight: bold;
+           font-weight: 700;
            letter-spacing: 1px;
            @include respond(tab-land) { // width < 1200?
             font-size: 3.5rem; //1 rem = 9px, 9/16 = 50%
@@ -51,10 +53,7 @@
            left: 1rem;
        }
 }
-
-
-////////////// Button 
-
+////////////////////////////// BUTTON STYLE 
 .btn {
     position: absolute;
     top: 50%;
@@ -68,6 +67,8 @@
         border-radius: 10rem;
         transition: all .2s;
         font-size: 3rem;
+        letter-spacing: 2px;
+        font-weight: 700;
 
         //Change for the <button> element
         border: none;
@@ -122,9 +123,54 @@
 }
 
 
+///////////////////////////// TICKER STYLE 
 
-///////////////////////////////// Animation 
-
+.ticker-wrap {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    overflow: hidden;
+    height: 4rem;
+    background-color: $color-matte-black;
+    padding-left: 100%;
+    box-sizing: content-box;
+    z-index: 100000000000;
+    @include respond(phone) { 
+        display: none;
+     }
+  
+    .ticker {
+  
+      display: inline-block;
+      height: 4rem;
+      line-height: 4rem;  
+      white-space: nowrap;
+      padding-right: 100%;
+      box-sizing: content-box;
+  
+      -webkit-animation-iteration-count: infinite; 
+              animation-iteration-count: infinite;
+      -webkit-animation-timing-function: linear;
+              animation-timing-function: linear;
+     -webkit-animation-name: ticker;
+             animation-name: ticker;
+      -webkit-animation-duration: $duration;
+              animation-duration: $duration;
+  
+      &__item {
+  
+        display: inline-block;
+  
+        padding: 0 2rem;
+        font-size: 2rem;
+        color: white;   
+  
+      }
+  
+    }
+  
+  }
+///////////////////////////// ANIMATIONS
 @keyframes moveInBottom {
     0% {
         opacity: 0;
@@ -152,8 +198,34 @@
     }
   }
 
+  @-webkit-keyframes ticker {
+    0% {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+      visibility: visible;
+    }
+  
+    100% {
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
+    }
+  }
+  
+  @keyframes ticker {
+    0% {
+      -webkit-transform: translate3d(0, 0, 0);
+      transform: translate3d(0, 0, 0);
+      visibility: visible;
+    }
+  
+    100% {
+      -webkit-transform: translate3d(-100%, 0, 0);
+      transform: translate3d(-100%, 0, 0);
+    }
+  }
 
-  ////////////////////////////////// sections 
+
+  ////////////////////////////////// SECTIONS STYLE
 
   .section-first-question {
       background-color: $color-medium-grey;
@@ -166,22 +238,15 @@
   }
 
 
-
-//////////////////////////////////// grid 
+////////////////////////////////// REUSEABLE GRID 
 .row {
     max-width: $grid-width;
     margin: 7rem auto;
-
-
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
-
-
     }
-
     @include respond(tab-port) { // width < 900?
-        max-width: 50rem;
-       
+        max-width: 50rem; 
     }
 
     [class^="col-"] {
@@ -203,11 +268,8 @@
         @include respond(tab-port) {
             width: 100%;
         }
-     
     }
-
 }
-
 
 input[type="submit"] {
     background-color: $color-matte-black;
@@ -223,7 +285,6 @@ input[type="submit"] {
         box-shadow: .1rem .1rem 0 0 $color-matte-black; // box shadow for accessibilty 
     }
 
-
      @include respond(tab-port) { // width < 900?
         font-size: 5rem;
     }
@@ -231,8 +292,6 @@ input[type="submit"] {
         font-size: 4rem;
     }
 }
-
-
 
 fieldset {
     border: none;
@@ -246,8 +305,7 @@ h3 {
 }
 
 
-
-///////////// Selection 
+////////////////////////////////// SELECTION OPTIONS STYLE 
 .custom-select {
     -webkit-appearance: none;
     -moz-appearance: none;
@@ -292,12 +350,15 @@ select::-ms-expand {
 }
 .buttons {
     @include respond(phone) {
-       margin: 10rem 0;
+       margin: 6rem 0;
        }
 }
 .section-options {
    margin: 10rem 0;
    padding: 5rem 0;
+   @include respond(phone) { 
+    margin: 4rem 0;
+    }
   
 }
 .icon {
@@ -307,15 +368,12 @@ select::-ms-expand {
     padding: 1rem 3rem 0; 
     background-color:  #f4f5f9;
     @include respond(phone) { 
-       padding-bottom: 1rem;
+       display: none;
        }
     
 }
 
-
-
-////////////////////////// scroll top 
-
+////////////////////////// SCROLL TOP BUTTON
 #scroll {
     position:fixed;
     right:10px;
@@ -355,36 +413,9 @@ select::-ms-expand {
     -ms-filter:"alpha(opacity=100)";
 }
 
-//////////////// style jquery 
 
-.last-section {
-    background-color: $color-medium-grey;
-    color: $color-matte-black;
-}
-.title {
-    font-size: 1rem;
-    text-transform: uppercase;
-
-}
-.paragraph {
-      font-size: 1rem;
-
-}
-.last-section img {
-    width: 20%;
-    height: auto;
-}
-
-.section-tours {
-    background-color: cyan;
-    padding: 25rem 0 15rem 0;
-    @include respond(tab-port) {
-        padding: 20rem 0 10rem 0;
-    }
-}
-
+/////////////////////////////////// CARD STYLE
 .card {
-
     // FUNCTIONALITY
     perspective: 150rem;
     -moz-perspective: 150rem;
@@ -407,29 +438,27 @@ select::-ms-expand {
 
         &--front {
             background-color: $color-white;
-
         }
-
         &--back {
             transform: rotateY(180deg);
-
             &-1 {
-                background-image: linear-gradient(to right bottom, $color-brick-red, #EC6A5C);
+                background-image: linear-gradient(to right bottom, $color-brick-red, $color-red-light);
             }
         }
     }
-  
-
     &:hover &__side--front {
         transform: rotateY(-180deg);
+        @include respond(phone) { 
+            transform: rotateY(0);
+            }
     }
 
     &:hover &__side--back {
         transform: rotateY(0);
+        @include respond(phone) { 
+        transform: rotateY(180deg);
+            }
     }
-
-
-  
 
     &__heading {
         font-size: 2.2rem;
@@ -441,7 +470,6 @@ select::-ms-expand {
         top: 0;
         right: 5rem;
         width: 75%;
-    
     }
 
     &__heading-span {
@@ -452,15 +480,13 @@ select::-ms-expand {
         &--1 {
             background-image: linear-gradient(to right bottom, 
             rgba($color-brick-red, .85), 
-            rgba(#EC6A5C, .85));
+            rgba($color-red-light, .85));
         }
     }
 
-   
-
     // FRONT SIDE STYLING
-    &__cta {
-       position: absolute;
+    &__guide {
+        position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
@@ -468,7 +494,7 @@ select::-ms-expand {
         text-align: center;
     }
 
-    &__price-box {
+    &__box {
         text-align: center;
         color: $color-white;
         margin-bottom: 8rem;
@@ -480,7 +506,6 @@ select::-ms-expand {
             font-weight: 700;
         }
     }
-
 }
 p {
     padding: 4rem;
@@ -490,7 +515,6 @@ p {
     width: 100%;
     height: 230px;
 }
-
 .read-more {
     background-color: $color-white;
     color: $color-matte-black;
@@ -511,11 +535,8 @@ p {
     transform: translate3d(7px, 7px, 0px);
     box-shadow: 7px 7px rgba(77, 77, 77, 0.5);
  }
-
 }
 
-
- 
  /////////////////////////////////////popup 
  .popup {
     height: 100vh;
@@ -528,6 +549,9 @@ p {
     opacity: 0;
     visibility: hidden;
     transition: all .3s;
+    @include respond(phone) { 
+        display: none;
+        }
 
     @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
         -webkit-backdrop-filter: blur(10px);
@@ -547,6 +571,7 @@ p {
         opacity: 0;
         transform: translate(-50%, -50%) scale(.25);
         transition: all .5s .2s;
+
     }
 
     &__left {
@@ -572,11 +597,11 @@ p {
 
         -moz-column-count: 2;
         -moz-column-gap: 4rem; //1em = 14px;
-        -moz-column-rule: 1px solid red;
+        -moz-column-rule: 1px solid $color-red-light;
 
         column-count: 2;
         column-gap: 4rem; //1em = 14px;
-        column-rule: 1px solid red;
+        column-rule: 1px solid $color-red-light;
 
         -moz-hyphens: auto;
         -ms-hyphens: auto;
@@ -598,7 +623,7 @@ p {
     &__close {
         &:link,
         &:visited {
-            color: yellowgreen;
+            color: $color-black;
             position: absolute;
             top: 2.5rem;
             right: 2.5rem;
